Fixed alternating colours on cards. Added gap between cards. Reduced gap between hats and cards.

--- a/src/Pages/CardDisplay/CardDisplay.css
+++ b/src/Pages/CardDisplay/CardDisplay.css
@@ -21,7 +21,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 
 #card-display-outer-container {
@@ -29,6 +28,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  gap: 10px;
   padding: 0 25% 0 25%;
   margin-top: 2%;
 }
